fix: Adjust gap value to that from the exercise.

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -20,7 +20,7 @@ body {
 .left-edge, .right-edge {
   display: flex;
   align-items: center;
-  gap: 20px;
+  gap: 16px;
 }
 
 .profile-image {
